enable graph runtime debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,8 @@ option(USE_OPENCL  "Build with OpenCL" OFF)
 option(USE_CUDA  "Build with CUDA" OFF)
 option(USE_CUDNN "Build with CUDNN" OFF)
 option(USE_TENSORRT "Build with Tensor RT" OFF)
+option(USE_TENSORRT "Build with Tensor RT" OFF)
+option(USE_GRAPH_RUNTIME_DEBUG "graph runtime debug" ON)
 
 
 # Use RPATH on Mac OS X as flexible mechanism for locating dependencies
